--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body{
-	background-color:#2E2E2E;
-	color:#FF0000;
+	background-image: url("../assets/wat.gif");
 	text-align:center;
 	font-family:Times;
 	font-size: 30px;
